# bin

./: .gitignore  .go-my-posh.json  .go-my-posh.yaml  .go-my-posh.yaml.bak  .ripgreprc  AddToAlbumHotkeys.user.js  DeleteLocalRemoteGitBranch.ps1  GITHUB_ACTIONS_SETUP.md  Get-Bin.ps1  Get-GitBranch.ps1  Get-GitDefaultBranch.ps1  Get-GitDefaultBranchRemote.ps1  Get-InputOrClipboard.ps1  Get-Links.ps1  Get-StaticProps.ps1  Get-YestStatus.ps1  GpxUpload.cs  Microsoft.PowerShell_profile.ps1  PSScriptAnalyzerSettings.psd1  README.md  RescueDay.ps1  Resolve-Host.ps1  TODO-CATEGORIZATION.md  Test-GitWorktree.ps1  Test-Shebang.ps1  add_dotfile.ps1  alias-to-hatch.ps1  all-colors.ps1  all-git-dirs.ps1  all-py-colors.py  all-rg-colors.ps1  allgit.ps1  analyze-deps.ps1  android-shortcuts.py  ansi.ps1  apho.ps1  assert-brew.ps1  assert-notes-links.ps1  awswho.ps1  bak.ps1  (+151 more)
.agent/: contextual-rules.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json5
AppScripts/: InboxGroupBy.js  InboxZero.js  README.md  RescueTime2Cal.js
app/: deps-PLAN.md
apps/: 1password.broken-totp-field.md  2fa-sms-audit.md  2fa-sms-fill.PLAN.md  2fa.md  3B1B-Neural-Networks.md  3b1b.md  AICodeReview.md  AIInMeetings.md  ActivationFunction.md  AddLibbyToChildAndroid.md  AirQuality.md  AnEngineersGuideToHappiness.md  Android.Capture.md  AndroidWifi2Data.md  AnsweringNegativeQuestion.md  AppGraveyard.md  ArchivingLinkedPages.md  Art of the Problem - AI.md  BackEnv.md  BankingForKids.md  BatteryTracker.md  Beeminder.md  Big Think - Consciousness.md  BrainGC.md  Brewfile  CSharp.md  (+386 more)
(+122 files in other folders)
