[project]
name = "darthwalsh-bin"
version = '0.1.alpha'
requires-python = ">= 3.13"

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
extend-select = [
    # see codes in https://docs.astral.sh/ruff/rules/
    "I",      # Validate isort rules
    "ISC001", # single-line-implicit-string-concatenation
    "RUF010", # explicit-f-string-type-conversion
    "RUF013", # implicit-optional
    "UP",     # pyupgrade automatically upgrade syntax for newer python versions
]
